# python-operations-api

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Pipfile  README.rst  bootstrap_env.sh  docker-compose.auth.yml  docker-compose.database.yml  docker-compose.noapp.yml  docker-compose.yaml  docker-compose.yml  requirements.txt  setup.cfg  setup.py
keycloak_demo/: configure-realm.sh  docker-compose.auth.yml  realm-export.json  start-keycloak-demo.sh
operations_api/: __main__.py  app.py  exceptions.py  extensions.py  gunicorn.py  restplus.py  wsgi.py
operations_api/config/: client_secrets.json  client_secrets_docker.json  logger_config.yml  settings.py
operations_api/database/: __init__.py  models.py
operations_api/database/models/: __init__.py  modelform.py
operations_api/tests/: base.py  client_secrets_test.json  test_auth.py
operations_api/utils/: logging.py
operations_api/v1/: __init__.py  modelform.py
operations_api/v1/api/model/: endpoints.py  operations.py  serializers.py
operations_api/v1/auth/: endpoints.py
operations_api/v1/modelform/: endpoints.py  utils.py
scripts/: entrypoint.sh  realms.json  setup_cockroachdb.sh  setup_db.sh  setup_keycloak.sh
